--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 		}
 
 		.resume-image {
-			width: 100%;
-			height: auto;
-			max-width: 100%;
+			    width: 100%;
+    			    max-width: 900px;
+                            height: auto;
+                            display: block;
+                            margin: 20px auto;
 		}
 	</style>
 	</head>
