--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                             display: block;
                             margin: 20px auto;
 		}
+		
+		iframe {
+    			    display: block;
+                            width: 100vw;
+                            height: 100vh;
+                            border: none;
+                }
 	</style>
 	</head>
 	<body>
