--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -49,6 +49,9 @@
 		}
 
 		.resume-image {
+			width: 100%;
+			height: auto;
+			max-width: 100%;
 			    width: 100%;
     			    max-width: 900px;
                             height: auto;
