--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
 			margin-top: 20px;
 		}
 
-		.resume-image {
+		.resume-container iframe {
 			width: 100%;
-			height: auto;
-			max-width: 100%;
-			    width: 100%;
-    			    max-width: 900px;
-                            height: auto;
-                            display: block;
-                            margin: 20px auto;
+			max-width: 900px;
+			height: 90vh;
+			display: block;
+			margin: auto;
+			border: none;
+			overflow: hidden;
 		}
 	</style>
 	</head>
@@ -90,9 +89,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="container text-center">
+		<div class="resume-container">
 			<h3>View My Resume:</h3>
-			<iframe src="Jonathan_Kaj Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
+			<iframe src="Jonathan_Kaj Resume.pdf"></iframe>
 		</div>
 	</div><!-- END container -->
 
