--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
 			margin-top: 20px;
 		}
 
-		.resume-container iframe {
+		.resume-image {
 			width: 100%;
-			max-width: 900px;
-			height: 90vh;
-			display: block;
-			margin: auto;
-			border: none;
-			overflow: hidden;
+			height: auto;
+			max-width: 100%;
+			    width: 100%;
+    			    max-width: 900px;
+                            height: auto;
+                            display: block;
+                            margin: 20px auto;
 		}
 	</style>
 	</head>
@@ -89,9 +90,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="resume-container">
+		<div class="container text-center">
 			<h3>View My Resume:</h3>
-			<iframe src="Jonathan_Kaj Resume.pdf"></iframe>
+			<iframe src="Jonathan_Kaj Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
 		</div>
 	</div><!-- END container -->
 
@@ -101,7 +102,7 @@
 				<div>
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Portfolio (Work in Progress)</a></li>
+						<li><a href="#">Portfolio(Work in Progress)</a></li>
 					</ul>
 				</div>
 
